--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
   <ul class="gallery"></ul>
   <script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
   <script src="gallery.js"></script>
+  <button style="position: fixed; bottom: 10px; left: 50%; transform: translateX(-50%);"
+   onclick="window.location.href='2-form.html'">Перейти до завдання 2</button>
 </body>
 </html>
